--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -66,7 +66,8 @@ nav.tab-bar {
 		}
 	}
 
-	a.left-off-canvas-toggle.menu-icon {
+	a.left-off-canvas-toggle.menu-icon,
+	a.right-off-canvas-toggle.menu-icon {
 		position: relative;
 		i {
 			position: absolute;
